fix: fix bug for reward
