# docs/swagger.json
@@ -457,7 +457,8 @@
                         "type": "integer",
                         "description": "amount",
                         "name": "amount",
-                        "in": "query"
+                        "in": "query",
+                        "required": true
                     },
                     {
                         "type": "boolean",
@@ -1715,13 +1716,15 @@
                 1,
                 2,
                 3,
-                4
+                4,
+                5
             ],
             "x-enum-varnames": [
                 "PoolStateAdd",
                 "PoolStateRemove",
                 "PoolStateUsed",
-                "PoolStateClaim"
+                "PoolStateClaim",
+                "PoolStateErr"
             ]
         },
         "model.PoolType": {
@@ -1762,19 +1765,25 @@
             "type": "integer",
             "enum": [
                 1,
+                3,
                 2,
                 6,
                 10,
+                11,
                 20,
-                21
+                21,
+                30
             ],
             "x-enum-varnames": [
                 "UtxoTypeDummy",
+                "UtxoTypeDummy1200",
                 "UtxoTypeBidY",
                 "UtxoTypeFakerInscription",
                 "UtxoTypeMultiInscription",
+                "UtxoTypeMultiInscriptionFromRelease",
                 "UtxoTypeRewardInscription",
-                "UtxoTypeRewardSend"
+                "UtxoTypeRewardSend",
+                "UtxoTypeLoop"
             ]
         },
         "request.Brc20CommitReq": {
@@ -2885,6 +2894,15 @@
                     "description": "PSBT Raw",
                     "type": "string"
                 },
+                "releaseTime": {
+                    "type": "integer"
+                },
+                "releaseTx": {
+                    "type": "string"
+                },
+                "releaseTxBlock": {
+                    "type": "integer"
+                },
                 "rewardCoinAmount": {
                     "type": "integer"
                 },
@@ -2907,6 +2925,10 @@
             "properties": {
                 "hadClaimRewardAmount": {
                     "description": "ClaimedOwnCoinAmount     uint64 `json:\"claimedOwnCoinAmount\"`\nClaimedOwnAmount         uint64 `json:\"claimedOwnAmount\"`\nClaimedOwnCount          uint64 `json:\"claimedOwnCount\"`",
+                    "type": "integer"
+                },
+                "hasReleasePoolOrderCount": {
+                    "description": "HadClaimRewardOrderCount uint64 `json:\"HadClaimRewardOrderCount\"`",
                     "type": "integer"
                 },
                 "net": {
